--- a/templates/todolist/index.html
+++ b/templates/todolist/index.html
@@ -17,6 +17,8 @@
         <span>{{ todo_object.todo }}</span>
         <button name="delete" type="submit" value="{{ todo_object.id }}">Delete</button>
         <a href="{% url 'edit' todo_object.id %}">Edit</a>
+        <span>{{ todo_object.completed }}</span>
+        <button name="complete" type="submit" value="{{ todo_object.id }}">☑️</button>
       {% endfor %}
     </form>
   </body>
