--- a/templates/todolist/index.html
+++ b/templates/todolist/index.html
@@ -1,24 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Todo-List</title>
-  </head>
-  <body>
-    <h1>Welcome</h1>
-    <form method="post">
-      {% csrf_token %}
-      <label>
-        <input placeholder="Enter your todo name here:" type="text" name="todo">
-      </label>
-      <button type="submit" name="add">Add</button>
-      {% for todo_object in todos %}
-        <hr>
-        <span>{{ todo_object.todo }}</span>
-        <button name="delete" type="submit" value="{{ todo_object.id }}">Delete</button>
-        <button name="complete" type="submit" value="{{ todo_object.id }}">☑️</button>
-        <a href="{% url 'edit' todo_object.id %}">Edit</a>
-      {% endfor %}
-    </form>
-  </body>
-</html>
+{% extends "navbar.html" %}
+{% block code %}
+<h1>Welcome</h1>
+<form method="post">
+  {% csrf_token %}
+  <label>
+    <input placeholder="Enter your todo name here:" type="text" name="todo">
+  </label>
+  <button type="submit" name="add">Add</button>
+  {% for todo_object in todos %}
+    <hr>
+    <span>{{ todo_object.todo }}</span>
+    <button name="delete" type="submit" value="{{ todo_object.id }}">Delete</button>
+    <button name="complete" type="submit" value="{{ todo_object.id }}">☑️</button>
+    <a href="{% url 'edit' todo_object.id %}">Edit</a>
+  {% endfor %}
+</form>
+{% endblock code %}
