--- a/templates/auth/dashboard.html
+++ b/templates/auth/dashboard.html
@@ -1,4 +1,5 @@
-<html>
+{% extends 'navbar.html' %}
+{% block dashboard %}
     <h1>This is my dashboard</h1>
     <a href="{% url 'user-logout' %}">Logout here</a>
-</html>
+{% endblock dashboard %}
