--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Todo-List</title>
+  <head>
+    <meta charset="UTF-8">
+    <title>Todo-List</title>
 </head>
-<body>
-  {% block navbar %}
-    <a href="{% url 'dashboard' %}">dashboard</a>
-    <a href="{% url 'completed_todos' %}">completed_todos</a>
-    <a href="{% url 'home_page' %}">home_page</a>
-    <a href="{% url 'gemini_main' %}">gemini_main</a>
-    <a href="{% url 'user-logout' %}">user-logout</a>
-    <br>
-  {% endblock navbar %}
+  <body>
+    {% block navbar %}
+      <a href="{% url 'dashboard' %}">dashboard</a>
+      <a href="{% url 'completed_todos' %}">completed_todos</a>
+      <a href="{% url 'home_page' %}">home_page</a>
+      <a href="{% url 'gemini_main' %}">gemini_main</a>
+      <a href="{% url 'user-logout' %}">user-logout</a>
+      <br>
+    {% endblock navbar %}
 
-  {% block code %}
-  {% endblock code %}
-</body>
+  {% block todolist %}
+  {% endblock todolist %}
+  {% block notes %}
+  {% endblock notes %}
+  {% block gemini %}
+  {% endblock gemini %}
+  {% block auth %}
+  {% endblock auth%}
+  {% block dashboard %}
+  {% endblock dashboard %}
+  {% block completed_todos %}
+  {% endblock completed_todos %}
+  </body>
 </html>
