--- a/templates/todolist/completed_todos.html
+++ b/templates/todolist/completed_todos.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Completed Todos</title>
-  </head>
-  <body>
-    <h1>Completed Todos</h1>
-    <form method="post">
-      {% csrf_token %}
-      <a href="{% url 'home_page' %}">Home Page</a>
+{% extends 'navbar.html' %}
+{% block completed_todos%}
+  <h1>Completed Todos</h1>
+  <form method="post">
+    {% csrf_token %}
+    <a href="{% url 'home_page' %}">Home Page</a>
+    <br>
+    {% for todo in todos %}
+      <span>{{ todo }} : {{ todo.completed_at }}</span>
       <br>
-      {% for todo in todos %}
-        <span>{{ todo }} : {{ todo.completed_at }}</span>
-        <br>
-      {% endfor%}
-    </form>
-  </body>
-</html>
+    {% endfor%}
+  </form>
+{% endblock completed_todos %}
